# engineai_humanoid

./: README.md
EngineAI_Controller/: .gitignore  CMakeLists.txt  EngineAI_Controller.cpp
EngineAI_Controller/common/: CMakeLists.txt
EngineAI_Controller/common/include/: Types.h  cTypes.h  config.h  cppTypes.h
EngineAI_Controller/common/include/Collision/: Collision.h  CollisionBox.h  CollisionMesh.h  CollisionPlane.h  ContactConstraint.h  ContactImpulse.h  ContactSpringDamper.h
EngineAI_Controller/common/include/ControlParameters/: ControlParameterInterface.h  ControlParameters.h  RobotParameters.h  SimulatorParameters.h
EngineAI_Controller/common/include/Controllers/: ContactEstimator.h  DesiredStateCommand.h  FootSwingTrajectory.h  GaitScheduler.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h  close_chain_mapping.h  state_estimator_lcmt.hpp
EngineAI_Controller/common/include/Dynamics/: ActuatorModel.h  DynamicsSimulator.h  EngineAIBiped.h  FloatingBaseModel.h  RobotConstructor.h  SpatialInertia.h  spatial.h
EngineAI_Controller/common/include/Math/: FirstOrderIIRFilter.h  Interpolation.h  MathUtilities.h  orientation_tools.h
EngineAI_Controller/common/include/SimUtilities/: GamepadCommand.h  IMUTypes.h  ImuSimulator.h  SimulatorMessage.h  SpineBoard.h  VisualizationData.h  ti_boardcontrol.h
EngineAI_Controller/common/include/Utilities/: BSplineBasic.h  CKalmanFilter.h  EdgeTrigger.h  PeriodicTask.h  SegfaultHandler.h  SharedMemory.h  Timer.h  Utilities_print.h  filters.h  pseudoInverse.h  utilities.h
EngineAI_Controller/common/src/Collision/: CollisionBox.cpp  CollisionMesh.cpp  CollisionPlane.cpp  ContactConstraint.cpp  ContactImpulse.cpp  ContactSpringDamper.cpp
EngineAI_Controller/common/src/ControlParameters/: ControlParameterInterface.cpp  ControlParameters.cpp
EngineAI_Controller/common/src/Controllers/: DesiredStateCommand.cpp  FootSwingTrajectory.cpp  GaitScheduler.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  close_chain_mapping.cpp
EngineAI_Controller/common/src/Dynamics/: DynamicsSimulator.cpp  FloatingBaseModel.cpp  RobotConstructor.cpp
EngineAI_Controller/common/src/SimUtilities/: ImuSimulator.cpp  SpineBoard.cpp  ti_boardcontrol.cpp
EngineAI_Controller/common/src/Utilities/: CKalmanFilter.cpp  PeriodicTask.cpp  SegfaultHandler.cpp  Utilities_print.cpp  filters.cpp  utilities.cpp
EngineAI_Controller/config/: simulator-defaults.yaml  zqsa01-robot-default-param.yaml
EngineAI_Controller/lcm-types/: file_list.txt  spi_data_t.lcm
EngineAI_Controller/lcm-types/cpp/: spi_data_t.hpp  state_estimator_lcmt.hpp
EngineAI_Controller/lcm-types/lcmtypes/: spi_data_t.java
EngineAI_Controller/lcm-types/python/: spi_data_t.py  state_estimator_lcmt.py
EngineAI_Controller/robot/: CMakeLists.txt
EngineAI_Controller/robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h  SimulationBridge.h  main_helper.h
EngineAI_Controller/robot/include/rt/: rt_rc_interface.h  rt_sbus.h  rt_serial.h
EngineAI_Controller/robot/src/: HardwareBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
EngineAI_Controller/robot/src/rt/: rt_rc_interface.cpp  rt_sbus.cpp  rt_serial.cpp
EngineAI_Controller/scripts/: autostart.sh  run_biped.sh
EngineAI_Controller/user/: CMakeLists.txt
EngineAI_Controller/user/EngineAI_Humanoid_Controller/: CMakeLists.txt  EngineAI_Humanoid_Controller.cpp  EngineAI_Humanoid_Controller.h  EngineAI_UserParameters.h
EngineAI_Controller/user/EngineAI_Humanoid_Controller/Controllers/RL_Controller/: CMakeLists.txt
EngineAI_Controller/user/EngineAI_Humanoid_Controller/Controllers/RL_Controller/config/: zqsa01_rl.yaml
EngineAI_Controller/user/EngineAI_Humanoid_Controller/Controllers/RL_Controller/include/rl_controllers/: LearningBasedController.h  Lowpassfilter.h  RotationTools.h  Types.h
EngineAI_Controller/user/EngineAI_Humanoid_Controller/Controllers/RL_Controller/policy/zqsa01/: zqsa01_policy.onnx
EngineAI_Controller/user/EngineAI_Humanoid_Controller/Controllers/RL_Controller/src/: LearningBasedController.cpp
EngineAI_Controller/user/EngineAI_Humanoid_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_Estop.cpp  FSM_State_Estop.h  FSM_State_JointPD.cpp  FSM_State_JointPD.h  FSM_State_LockJoint.cpp  FSM_State_LockJoint.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_RL_Locomotion.cpp  FSM_State_RL_Locomotion.h  SafetyChecker.cpp  SafetyChecker.h  TransitionData.h
dep-pkgs/: README.md  motor-mcu_1.0.8_amd64.deb
